replaced emojis to images

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="overlay" id="flash"></div>
-  <div class="emoji">🤣</div>
+  <img class="emoji" src="emojis/emoji1.png" alt="emoji">
   <main>
     <div class="container">
       <div class="camera">
@@ -25,8 +25,8 @@
 
           <div class="colored-label"></div>
           <div class="camera-bar"></div>
+          <span class="hand-emoji">👇</span>
           <div class="camera-button">
-            <span>👇</span>
           </div>
           <p class="msg">Click the button to take a picture</p>
         </div>
