--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="shortcut icon" href="https://img.icons8.com/external-icongeek26-linear-colour-icongeek26/64/null/external-camera-virtual-reality-icongeek26-linear-colour-icongeek26.png" type="image/x-icon">
+  <title>Draw Camera with CSS</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
